third_party/move/move-compiler-v2/tests/reference-safety/v1-borrow-tests/mutable_borrow_invalid.exp

Diagnostics:
error: same mutable reference in local `x` is also used in other value in argument list
   ┌─ tests/reference-safety/v1-borrow-tests/mutable_borrow_invalid.move:17:9
   │
14 │         let x = if (cond) &mut root.f else &mut root.g;
   │                           -----------      ----------- previous mutable field borrow
   │                           │
   │                           previous mutable field borrow
   ·
17 │         foo(x, &mut root.f);
   │         ^^^^^^^^^^^^^^^^^^^
   │         │      │
   │         │      previous mutable field borrow
   │         requirement enforced here
